--- a/client/chrome_extension/assets/css/vidcall.css
+++ b/client/chrome_extension/assets/css/vidcall.css
@@ -158,6 +158,7 @@ video#localVideo {
     transition: max-height 0.2s ease-in-out;
     background-color: aliceblue;
     transform: rotateY(180deg);
+    position: relative;
 }
 
 video#remoteVideo {
@@ -165,4 +166,5 @@ video#remoteVideo {
     width: 100%;
     border-radius: 3%;
     background-color: aliceblue;
+    position: relative;
 }
